# anilist

./: .env.example  .gitignore  README.md  pyproject.toml
src/anilist_bot/: __init__.py  bot.py  config.py  handlers.py  main.py  models.py  storage.py
src/anilist_bot/application/: anime_list_service.py  media_library_service.py  settings.py
src/anilist_bot/domain/: media.py  repositories.py
src/anilist_bot/infrastructure/storage/: json_storage.py
src/anilist_bot/presentation/telegram/: i18n.py  keyboards.py  messages.py  router.py
src/anilist_bot/presentation/telegram/handlers/: add_anime.py  add_media.py  edit_media.py  help.py  list_anime.py  list_media.py  menu.py  start.py
tests/: test_anime_list_service.py  test_media_library_service.py  test_messages.py  test_storage.py
