[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "anilist-telegram-bot"
version = "0.1.0"
description = "Telegram bot for tracking watched anime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
anilist-bot = "anilist_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
